--- a/magic.css
+++ b/magic.css
@@ -1,3 +1,5 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>(edited)
+body {
+    width: 800px;
+    margin: 0 auto;
+    text-align: justify;
+}
