--- a/magic.css
+++ b/magic.css
@@ -1,5 +1,6 @@
 body {
-    display: none;
+    
+    div.question = display: none;
     width: 800px;
     margin: 0 auto;
     text-align: justify;
